--- a/LuaSTGEditorSharp/Changelogs/0.78.1_changelog.md
+++ b/LuaSTGEditorSharp/Changelogs/0.78.1_changelog.md
@@ -1,16 +1,12 @@
 ﻿## LuaSTG Editor Sharp X - 0.78.1
 ## Features
 
-* Added a whole new Toolbox for the BerryLib. (LuaSTG-Sub only)
 * Added support for LuaSTG-Flux.
-
-## Nodes in BerryLib
-
-* Tween library.
+* Added a whole new Toolbox for the BerryLib: WIP (Not usable without raw settings edit)
 
 ## Changes
 
-* Changed the settings for supporting multiple toolboxes.
+* Changed the settings for supporting multiple toolboxes. (Not usable without raw settings edit)
 
 ## Fixes
 
